outputs/tsp_constructive-constructive/2025-09-20_23-36-10/evaluations/problem_eval-7147784898193628718_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in the network. It prioritizes the destination if unvisited, otherwise selects the node maximizing a weighted sum of the distance ratio and inverse centrality, favoring nodes that are both closer to the destination and less central in the network.}
                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in the network. It prioritizes the destination if unvisited, otherwise selects the node maximizing a weighted sum of the distance ratio and inverse centrality, favoring nodes that are both closer to the destination and less central in the network.}
                                                                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
